New Feature: added API/Action getAccountPermissions
